fixed too big serch box

--- a/share/ui/style.css
+++ b/share/ui/style.css
@@ -177,12 +177,6 @@ iconview *:hover {
     font-size: 11px;
 }
 
-/* Command Palette */
-#CPFilter {
-    padding: 9px;
-    font-size: 18px;
-}
-
 #CPBase {
     margin-top: 30px;
     border: 5px solid @theme_bg_color;
